# boatrace_scraping

./: .gitignore  README.md  pyproject.toml
boatrace_scraping/: data_fetcher.py  main.py  models.py  utils.py
tests/: test_boatrace_scraping.py
